external-crates/move/move-compiler/tests/move_check/warning_suppression/allow_with_no_filter.exp
error[E10003]: invalid attribute value
  ┌─ tests/move_check/warning_suppression/allow_with_no_filter.move:2:3
  │
2 │ #[allow]
  │   ^^^^^ Expected list of warnings, e.g. 'allow(unused)'

