external-crates/move/move-compiler/tests/move_check/warning_suppression/allow_with_no_filter.move
// allow needs a warning
#[allow]
module 0x42::m {}
